--- a/cards.conf
+++ b/cards.conf
@@ -2,6 +2,14 @@
 # Card number and number of cards
 number_of_cards = 1:2, 2:3, 3:1
 # Number of cards to pick from a deck
-number_of_picikng = 3
+number_of_draw = 3
 # Total value of card number
 cards_total = 5
+
+[example2]
+# Card number and number of cards
+number_of_cards = 1:2, 2:2, 3:3, 5:1
+# Number of cards to pick from a deck
+number_of_draw = 4
+# Total value of card number
+cards_total = 6
